--- a/WebAuth/Auth.csproj
+++ b/WebAuth/Auth.csproj
@@ -78,41 +78,41 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Code\CommandHandlers\AnnouncementsCommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\ClientTextMetaDataCreateCommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\ClientTextMetaDatasCommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\CommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\CreateEntermateUserCommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\CreateFacebookUserCommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\CreateGoogleUserCommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\CreateGuestUserCommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\GameAssetBundlesCommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\GameMetaDataCreateCommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\GameMetaDatasCommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\GameServersCommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\LoginCommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\PurchaseCommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\PurchaseExceptionalLogCommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\SupportedLanguagesCommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\SystemSettingCommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\UserHerosCommandHandler.cs" />
-    <Compile Include="App_Code\Data\MakeGameMetaData.cs" />
-    <Compile Include="App_Code\Data\UserAccessToken.cs" />
-    <Compile Include="App_Code\Data\UserType.cs" />
-    <Compile Include="App_Code\System\Biz.cs" />
-    <Compile Include="App_Code\System\CommandHandlerException.cs" />
-    <Compile Include="App_Code\System\ComUtil.cs" />
-    <Compile Include="App_Code\System\Config.cs" />
-    <Compile Include="App_Code\System\Connect.cs" />
-    <Compile Include="App_Code\System\Dac.cs" />
-    <Compile Include="App_Code\System\DacGame.cs" />
-    <Compile Include="App_Code\System\DateTimeUtil.cs" />
-    <Compile Include="App_Code\System\DBUtil.cs" />
-    <Compile Include="App_Code\System\LitJsonUtil.cs" />
-    <Compile Include="App_Code\System\LogUtil.cs" />
-    <Compile Include="App_Code\System\Util.cs" />
-    <Compile Include="App_Code\System\VerifyReceiptApple.cs" />
-    <Compile Include="App_Code\System\VerifyReceiptGoogle.cs" />
+    <Compile Include="App_Codes\CommandHandlers\AnnouncementsCommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\ClientTextMetaDataCreateCommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\ClientTextMetaDatasCommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\CommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\CreateEntermateUserCommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\CreateFacebookUserCommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\CreateGoogleUserCommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\CreateGuestUserCommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\GameAssetBundlesCommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\GameMetaDataCreateCommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\GameMetaDatasCommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\GameServersCommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\LoginCommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\PurchaseCommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\PurchaseExceptionalLogCommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\SupportedLanguagesCommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\SystemSettingCommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\UserHerosCommandHandler.cs" />
+    <Compile Include="App_Codes\Data\MakeGameMetaData.cs" />
+    <Compile Include="App_Codes\Data\UserAccessToken.cs" />
+    <Compile Include="App_Codes\Data\UserType.cs" />
+    <Compile Include="App_Codes\System\Biz.cs" />
+    <Compile Include="App_Codes\System\CommandHandlerException.cs" />
+    <Compile Include="App_Codes\System\ComUtil.cs" />
+    <Compile Include="App_Codes\System\Config.cs" />
+    <Compile Include="App_Codes\System\Connect.cs" />
+    <Compile Include="App_Codes\System\Dac.cs" />
+    <Compile Include="App_Codes\System\DacGame.cs" />
+    <Compile Include="App_Codes\System\DateTimeUtil.cs" />
+    <Compile Include="App_Codes\System\DBUtil.cs" />
+    <Compile Include="App_Codes\System\LitJsonUtil.cs" />
+    <Compile Include="App_Codes\System\LogUtil.cs" />
+    <Compile Include="App_Codes\System\Util.cs" />
+    <Compile Include="App_Codes\System\VerifyReceiptApple.cs" />
+    <Compile Include="App_Codes\System\VerifyReceiptGoogle.cs" />
     <Compile Include="App_GlobalResources\Message.ko-kr.designer.cs">
       <DependentUpon>Message.ko-kr.resx</DependentUpon>
       <AutoGen>True</AutoGen>
