--- a/WebGate/Gate.csproj
+++ b/WebGate/Gate.csproj
@@ -67,16 +67,16 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Code\CommandHandlers\CommandHandler.cs" />
-    <Compile Include="App_Code\CommandHandlers\StageFarmVersionCommandHandler.cs" />
-    <Compile Include="App_Code\System\CommandHandlerException.cs" />
-    <Compile Include="App_Code\System\Config.cs" />
-    <Compile Include="App_Code\System\Dac.cs" />
-    <Compile Include="App_Code\System\DateTimeUtil.cs" />
-    <Compile Include="App_Code\System\DBUtil.cs" />
-    <Compile Include="App_Code\System\LitJsonUtil.cs" />
-    <Compile Include="App_Code\System\LogUtil.cs" />
-    <Compile Include="App_Code\System\Util.cs" />
+    <Compile Include="App_Codes\CommandHandlers\CommandHandler.cs" />
+    <Compile Include="App_Codes\CommandHandlers\StageFarmVersionCommandHandler.cs" />
+    <Compile Include="App_Codes\System\CommandHandlerException.cs" />
+    <Compile Include="App_Codes\System\Config.cs" />
+    <Compile Include="App_Codes\System\Dac.cs" />
+    <Compile Include="App_Codes\System\DateTimeUtil.cs" />
+    <Compile Include="App_Codes\System\DBUtil.cs" />
+    <Compile Include="App_Codes\System\LitJsonUtil.cs" />
+    <Compile Include="App_Codes\System\LogUtil.cs" />
+    <Compile Include="App_Codes\System\Util.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
