--- a/WebAdmin/Web.config
+++ b/WebAdmin/Web.config
@@ -5,7 +5,8 @@
   </connectionStrings>
   <appSettings>
     <add key="SITE_NAME" value="Rappelz The Rift Admin (RealSTG)" />
-    <add key="SITE_URL" value="127.0.0.1:44300" />
+    <!--限制域名访问，本地不设置-->
+    <add key="SITE_URL" value="" />
     <add key="HashKey" value="fkvpfwmflvmxmdprtptmgotlzl!@#" />
     <add key="USER" value="devadmin|1234|9" />
     <add key="Languages" value="zh" />
